<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="ru.stolexiy.catman.R" />

        <import type="ru.stolexiy.catman.ui.util.Converters" />

        <variable
            name="purpose"
            type="ru.stolexiy.catman.ui.dialog.purpose.model.Purpose" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:background="?attr/background">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <View
                android:id="@+id/dialog_dash"
                style="@style/DialogDash"
                android:layout_marginTop="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/dialog_title"
                style="?attr/textAppearanceHeadline5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/add_purpose"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/dialog_dash" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/purpose_name_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="25dp"
                android:hint="@string/purpose"
                android:minWidth="100dp"
                app:addAsteriskToHint="@{true}"
                app:boxBackgroundMode="outline"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/dialog_title"
                app:validateBy="@{purpose.name}">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/purpose_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textAutoComplete|textAutoCorrect|textCapSentences" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/purpose_category_layout"
                style="?attr/textInputOutlinedExposedDropdownMenuStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:hint="@string/category"
                app:addAsteriskToHint="@{true}"
                app:bindError="@{purpose.category}"
                app:layout_constraintEnd_toEndOf="@+id/purpose_name_layout"
                app:layout_constraintStart_toStartOf="@+id/purpose_name_layout"
                app:layout_constraintTop_toBottomOf="@+id/purpose_name_layout"
                app:startIconColoredCircle="@{purpose.category.asFlow.color}"
                app:startIconIsGone="@{purpose.category.asFlow == null}"
                app:startIconMinSize="25dp">

                <com.google.android.material.textfield.MaterialAutoCompleteTextView
                    android:id="@+id/purpose_category"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusableInTouchMode="false"
                    android:inputType="none"
                    android:text="@{purpose.category.asFlow.name}" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/purpose_deadline_layout"
                style="?attr/textInputOutlinedExposedDropdownMenuStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                app:addAsteriskToHint="@{true}"
                app:bind="@{purpose.deadline}"
                app:bindError="@{purpose.deadline}"
                app:endIconIsGone="@{true}"
                app:layout_constraintEnd_toEndOf="@+id/purpose_category_layout"
                app:layout_constraintStart_toStartOf="@+id/purpose_category_layout"
                app:layout_constraintTop_toBottomOf="@id/purpose_category_layout"
                app:startIconDrawable="@drawable/calendar"
                app:toTextConverter='@{Converters.localDateConverter("dd.MM.yyyy")}'>

                <com.google.android.material.textfield.MaterialAutoCompleteTextView
                    android:id="@+id/purpose_deadline"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusableInTouchMode="false"
                    android:hint="@string/deadline"
                    android:inputType="none"
                    android:minWidth="250dp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/purpose_description_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:hint="@string/description"
                app:layout_constraintEnd_toEndOf="@+id/purpose_deadline_layout"
                app:layout_constraintStart_toStartOf="@id/purpose_deadline_layout"
                app:layout_constraintTop_toBottomOf="@+id/purpose_deadline_layout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/purpose_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textImeMultiLine|textAutoComplete|textAutoCorrect|textCapSentences"
                    android:maxLines="2"
                    android:text="@{purpose.description}" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/legend_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/required_field_legend"
                android:textAlignment="textStart"
                app:layout_constraintEnd_toEndOf="@+id/purpose_description_layout"
                app:layout_constraintStart_toStartOf="@+id/purpose_description_layout"
                app:layout_constraintTop_toBottomOf="@+id/purpose_description_layout"
                app:textColoring="@{R.color.pink}"
                app:textColoringPart='@{"*"}' />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/add_purpose_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="30dp"
                android:contentDescription="@string/add_purpose"
                android:enabled="@{purpose.isValidAsFlow}"
                android:text="@string/add"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/legend_text" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>
</layout>