...
    <string name="drawer_description">Меню навигации</string>
    <string name="required_field_legend">* Обязательное поле</string>
    <string name="required_field_error">Обязательное поле</string>
    <string name="add">Добавить</string>
    <string name="apply">Применить</string>
    <string name="add_category">Добавить сферу</string>
    <string name="choose">Выбрать</string>
    <string name="category">Сфера жизни</string>
    <string name="purpose_settings">Настройки цели</string>
    <string name="category_settings">настройки категории</string>
    <string name="remove">Удалить</string>
    <string name="internal_error">Произошла внутренняя ошибка приложения</string>
    <string name="background_work">Фоновая работа</string>
...
