<resources>
    <string name="app_name" translatable="false">AY Widgets Samples</string>
    <string name="count_up">Count up</string>
    <string name="count_down">Count down</string>
    <string name="circle_progress_view">Circle progress view</string>
    <string name="clockwise">Clockwise</string>
    <string name="counterclockwise">Counterclockwise</string>
    <string name="filling">Filling progress</string>
    <string name="decreasing">Decreasing progress</string>
    <string name="start">Start</string>
    <string name="reset">Reset</string>
    <string name="timer_view">Timer view</string>
    <string name="pause">Pause</string>
</resources>